Fix content not showing correctly

--- a/frontend/src/app/components/post-card/post-card.component.css
+++ b/frontend/src/app/components/post-card/post-card.component.css
@@ -33,6 +33,12 @@
   justify-content: center;
 }
 
+.media img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .content {
   /*background-color: lightyellow;*/
 }
